     - add IsBottomSolid to Walls to have Walls optionally completely closed (bottom was always open)

  -> the data-format of the physics sets (*.vpp files) is basically the same, although the parameters inside are different, so unfortunately you need to set them up from scratch again

- Select Elements dialog improved. It shows the type of the element and if supported the used images. 
  
- new Camera Mode added to the Table menu. This mode starts the player in a special mode where you can change backdrop settings with the following keys:
     left flipper key = decrease value
     right flipper key = increase value
     left magna save key = previous backdrop option
     right magna save key = next backdrop option

- new setting in the video preferences to setup rotation for cabinet mode (or otherwise standard desktop)
  this allows a table to be used in/setup for both DT and FS by setting the backglass options correctly for both modes

- adjust cabinets: in the video options select "Cabinet anti-stretch the ball" and depending on your screen you can enter a correction offset for the
                   aspect ratio. If you use a 16:9 screen use a correction offset of X=0.0 and Y=1.5. For a 16:10 screen use X=0.0 and Y=0.0 for best results.
                   This option only applies to rotated and fullscreen rendered tables (cabinet mode)!
                   Even with this option you might need to adjust the backdrop settings. The biggest problem for an egg-shaped ball is the Layback value.
                   Values over 70-80 are way too high and should be lowered. The scaling can become a problem too.
                   To find a better POV with a round ball over the playfield do the following:
                   - set the min/max slope to 0 and start the table in Camera Mode (menu Table -> Camera Mode)
                   - enter debug mode and activate "Throw balls in player"
                   - drop balls all over the table and adjust the POV settings
