@@ -259,14 +259,13 @@ public:
 
 private:
 #ifdef USE_D3D9EX
-   IDirect3D9Ex* m_pD3D;
+   IDirect3D9Ex* m_pD3DEx;
 
-   IDirect3DDevice9Ex* m_pD3DDevice;
-#else
+   IDirect3DDevice9Ex* m_pD3DDeviceEx;
+#endif
    IDirect3D9* m_pD3D;
 
    IDirect3DDevice9* m_pD3DDevice;
-#endif
 
    IDirect3DSurface9* m_pBackBuffer;
 
