@@ -2,7 +2,7 @@
 
 //#define DISABLE_FORCE_NVIDIA_OPTIMUS // do not enable NVIDIA Optimus cards (on Laptops, etc) by default
 
-//#define USE_D3D9EX // if enabled can use extended API, does not work on XP though // currently only allows to enable adaptive vsync again
+#define USE_D3D9EX // if enabled can use extended API, does not benefit on XP though // currently only allows to enable adaptive vsync again
 
 //#define COMPRESS_MESHES // abuses the VP-Image-LZW compressor for compressing the meshes (usually pretty weak though, overall compresses the full VPX by 0-10% only)
 
